force-app/main/default/objects/LOPA_Label__mdt/LOPA_Label__mdt.object-meta.xml
<CustomObject>
    <label>LOPA Label</label>
    <pluralLabel>LOPA Labels</pluralLabel>
</CustomObject>