force-app/main/default/objects/LOPA_Label__mdt/fields/Actual_Label__c.field-meta.xml
<CustomField>
    <fullName>Actual_Label__c</fullName>
    <label>Actual Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>