force-app/main/default/objects/LOPA_Label__mdt/fields/Temp_Label__c.field-meta.xml
<CustomField>
    <fullName>Temp_Label__c</fullName>
    <description>Temporary label that is generated by code</description>
    <label>Temp Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>